Updated style and fixed quantity inputs and overflow errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,21 @@
     font-style: normal;
 }
 
+::-webkit-scrollbar {
+    width: .5rem;
+}
+
+::-webkit-scrollbar-track {
+    background: hsl(183, 100%, 8%);
+}
+
+
+::-webkit-scrollbar-thumb {
+    background: hsl(49, 56%, 74%);
+    border-radius: 10px;
+    height: .2rem;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -82,10 +97,6 @@ h2 {
     user-select: none;
 }
 
-.crypt-tomb-button:hover {
-    scale: 105%;
-}
-
 .crypt-tomb-fieldset{
     margin-bottom: 1rem;
     padding: .5rem;
@@ -145,4 +156,14 @@ h2 {
     text-align: center;
     font-size: 2rem;
     padding: .5rem;
+    overflow-wrap: anywhere;
+    max-height: 10rem;
+    overflow-y: scroll;
+    border: 1px solid hsl(79, 14%, 90%);
+}
+
+@media (hover: hover) {
+    .crypt-tomb-button:hover {
+        scale: 105%;
+    }
 }
